<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:id="@+id/constraintLayout"
                                             android:padding="2dp"
                                             android:layout_margin="2dp"
                                             android:background="@drawable/rectangle_border"
>


    <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:hint="@string/day"
                android:textAlignment="center"

        />

        <LinearLayout
                android:id="@+id/icon_daily_datum"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:layout_gravity="center"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp">
            <TextView
                    android:text="@string/high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" android:gravity="end"/>
            <TextView
                    android:id="@+id/tempH_daily_datum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/high_high"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:textAlignment="textStart"
                    android:gravity="start" android:layout_marginStart="10dp"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="1dp"
                android:weightSum="2"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp">
            <TextView
                    android:text="@string/Low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" android:gravity="end"/>
            <TextView
                    android:id="@+id/TempL_daily_datum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:hint="@string/low"
                    android:textAlignment="textStart"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginLeft="10dp"

                    android:layout_marginStart="10dp"/>
        </LinearLayout>
            <TextView
                    android:id="@+id/sunrise_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/sunrise"
                    android:textAlignment="textStart"
                    android:gravity="start"/>

            <TextView
                    android:id="@+id/sunset_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/sunset"
                    android:textAlignment="textStart"
                    android:gravity="start"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>