<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/main_background"
                                             tools:context=".MainActivity">
    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
        >

            <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    android:src="@drawable/worldwide_location"/>

                <TextView
                        android:id="@+id/region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/region"
                        android:textSize="18sp"
                        android:layout_alignBottom="@id/locationIcon"
                        android:layout_alignRight="@id/locationIcon"
                        android:gravity="center"

                        android:layout_alignEnd="@id/locationIcon"/>
        </RelativeLayout>


        <TextView
                android:id="@+id/dateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_and_time"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/summeryForDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:hint="@string/shows_sunny_cloudy_rain"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@android:color/holo_purple"

        />


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">


            <LinearLayout
                    android:id="@+id/linearLayoutIcon"
                    android:orientation="horizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"/>

            <TextView
                    android:id="@+id/temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/tempearture"
                    android:textColor="@android:color/holo_purple"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:textAlignment="center"

            />


        </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
        <TextView
                android:id="@+id/feelTempp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/feels_like"
                android:textAlignment="center"
        />

        <TextView
                android:id="@+id/feelsLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="2dp"
                android:hint="@string/feels_like"
                android:textColor="@android:color/holo_purple"
                android:textStyle="bold"
                android:textSize="16sp"

        />

    </LinearLayout>


        <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rectangle_border"
                android:orientation="vertical"
                android:padding="8dp"
                android:weightSum="2">

            <TextView
                    android:id="@+id/daily_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/daily"
                    android:textSize="18sp"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:textStyle="bold"

                    android:layout_marginStart="5dp"/>

            <TextView
                    android:id="@+id/summary_daily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/summary"
                    android:layout_marginLeft="5dp"
                    android:textAlignment="textStart"
                    android:gravity="start" android:layout_marginStart="5dp"/>

            <TextView
                    android:id="@+id/icon_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/rain_cloudy"
                    android:layout_marginLeft="5dp"
                    android:textAlignment="textStart"
                    android:gravity="start" android:layout_marginStart="5dp"/>


            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewDaily"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll2"
                    app:layout_constraintVertical_bias="0.2"

                    android:layout_marginStart="5dp"/>
        </LinearLayout>

    </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.constraint.ConstraintLayout>